@@ -464,25 +464,27 @@ public final class Main implements Callable<Integer> {
     }
 
     public static void ensureExamplesAvailable() {
-        File examplesDir = getExamplesDir() == null ? ExampleChooser.lookForExamples()
-                : new File(getExamplesDir());
-        if (!examplesDir.exists()) {
+        Path examplesDir = getExamplesDir() == null
+                ? ExampleChooser.lookForExamples()
+                : getExamplesDir();
+
+        if (!Files.exists(examplesDir)) {
             examplesDir = setupExamples();
         }
-        setExamplesDir(examplesDir.getAbsolutePath());
+        setExamplesDir(examplesDir.toAbsolutePath());
     }
 
-    private static File setupExamples() {
+    private static Path setupExamples() {
         try {
             URL examplesURL = Main.class.getResource("/examples.zip");
             if (examplesURL == null) {
                 throw new IOException("Missing examples.zip in resources");
             }
 
-            File tempDir = createTempDirectory();
+            Path tempDir = createTempDirectory();
 
             if (tempDir != null) {
-                IOUtil.extractZip(examplesURL.openStream(), tempDir.toPath());
+                IOUtil.extractZip(examplesURL.openStream(), tempDir);
             }
             return tempDir;
         } catch (IOException e) {
@@ -491,13 +493,9 @@ public final class Main implements Callable<Integer> {
         }
     }
 
-    private static File createTempDirectory() throws IOException {
-        final File tempDir = File.createTempFile("keyheap-examples-", null);
-        tempDir.delete();
-        if (!tempDir.mkdir()) {
-            return null;
-        }
-        Runtime.getRuntime().addShutdownHook(new Thread(() -> IOUtil.delete(tempDir)));
+    private static Path createTempDirectory() throws IOException {
+        Path tempDir = Files.createTempDirectory("keyheap-examples-");
+        Runtime.getRuntime().addShutdownHook(new Thread(() -> IOUtil.delete(tempDir.toFile())));
         return tempDir;
     }
 
@@ -541,7 +539,7 @@ public final class Main implements Callable<Integer> {
         }
 
         if (inputFiles != null && !inputFiles.isEmpty()) {
-            Path f = inputFiles.get(0);
+            Path f = inputFiles.getFirst();
             if (Files.isDirectory(f)) {
                 workingDir = f;
             } else {
@@ -552,20 +550,20 @@ public final class Main implements Callable<Integer> {
         }
     }
 
-    private static String EXAMPLE_DIR = null;
+    private static Path EXAMPLE_DIR = null;
 
-    public static @Nullable String getExamplesDir() {
+    public static @Nullable Path getExamplesDir() {
         return EXAMPLE_DIR;
     }
 
     /**
-     * Defines the examples directory. This method is used by the Eclipse
+     * Defines the examples' directory. This method is used by the Eclipse
      * integration (KeY4Eclipse)
      * to use the examples extract from the plug-in into the workspace.
      *
      * @param newExamplesDir The new examples directory to use.
      */
-    public static void setExamplesDir(String newExamplesDir) {
+    public static void setExamplesDir(Path newExamplesDir) {
         EXAMPLE_DIR = newExamplesDir;
     }
 }
